test/errors/error27.vult

fun foo() {
  val x = [1];
  x.e = 0;
}